# pelican-lofar

./: .gitignore  install.txt
src/: .cproject  .gitignore  .project  CMakeLists.txt  CMakeLists.txt~  LofarStreamDataClient.cpp  LofarStreamDataClient.h  lofarClient.cpp  modules.cmake  modules.cmake~  serverEmbrace.cpp  serverEmbrace2.cpp  serverMain.cpp
src/cmake/: CMakeSettings.cmake  FindDAL.cmake  FindHDF5.cmake  FindLofarDAL.cmake  FindMKL.cmake  FindOpenMP.cmake  FindPGPLOT.cmake  FindPelican.cmake  compilerDefaults.cmake  tags.cmake
src/crosschecker/: CMakeLists.txt  CorrelatedBufferManager.h  CorrelatingBuffer.h  CorrelationCheckModule.h  main.cpp
src/crosschecker/src/: CorrelatedBufferManager.cpp  CorrelatingBuffer.cpp  CorrelationCheckModule.cpp
src/crosschecker/test/: CMakeLists.txt
src/doc/: API.doxy
src/lib/: ABBufDataClient.h  ABChunker.h  ABData.h  ABDataAdapter.h  ABDataClient.h  ABOutputStream.h  ABPacket.h  ABProc.h  AdapterSubbandTimeSeries.h  AdapterTimeSeriesDataSet.h  AdapterTimeStream.h  AsyncronousJob.h  AsyncronousModule.h  AsyncronousTask.h  BandPass.h  BandPassAdapter.h  BandPassOutput.h  BandPassRecorder.h  BinMap.h  BinnedData.h  BlobStatistics.h  BufferingAgent.h  BufferingDataClient.h  CMakeLists.txt  ChannelisedStreamData.h  ChanneliserPolyphase.h  DedispersedSeries.h  DedispersedTimeSeries.h  DedispersionAnalyser.h  DedispersionBuffer.h  DedispersionDataAnalysis.h  DedispersionDataAnalysisOutput.h  DedispersionEvent.h  DedispersionKernel.cu  DedispersionModule.h  DedispersionParameters.h  DedispersionSpectra.h  EmbraceChunker.h  EmbraceFBWriter.h  EmbracePowerGenerator.h  (+70 more)
src/lib/data/: Cube.h  LofarDataCube.h  Matrix.h  README.txt  Spectra.h  Spectrum.h  TimeSeries.h
src/lib/data/test/: CMakeLists.txt  CubeTest.h  LofarDataCubeTest.h  MatrixTest.h
src/lib/src/: ABBufDataClient.cpp  ABChunker.cpp  ABDataAdapter.cpp  ABDataClient.cpp  ABOutputStream.cpp  ABProc.cpp  AdapterSubbandTimeSeries.cpp  AdapterTimeSeriesDataSet.cpp  AdapterTimeStream.cpp  AsyncronousJob.cpp  AsyncronousModule.cpp  AsyncronousTask.cpp  BandPass.cpp  BandPassAdapter.cpp  BandPassOutput.cpp  BandPassRecorder.cpp  BinMap.cpp  BinnedData.cpp  BlobStatistics.cpp  BufferingAgent.cpp  BufferingDataClient.cpp  ChannelisedStreamData.cpp  ChanneliserPolyphase.cpp  DedispersionAnalyser.cpp  DedispersionBuffer.cpp  DedispersionDataAnalysis.cpp  DedispersionDataAnalysisOutput.cpp  DedispersionEvent.cpp  DedispersionModule.cpp  DedispersionSpectra.cpp  EmbraceChunker.cpp  EmbraceFBWriter.cpp  EmbracePowerGenerator.cpp  EmbraceSubbandSplittingChunker.cpp  FileWriter.cpp  FilterBankAdapter.cpp  FilterBankHeader.cpp  GPU_Job.cpp  GPU_Kernel.cpp  GPU_Manager.cpp  (+49 more)
src/lib/test/: ABEmulator.h  ABEmulatorTest.py  AdapterSubbandTimeSeriesTest.h  AdapterTimeSeriesDataSetTest.h  AdapterTimeStreamTest.h  BandPassTest.h  BinMapTest.h  CMakeLists.txt  CMakeLists.txt~  ChannelisedStreamDataTest.h  ChanneliserPolyphaseTest.h  CudaVectorAdd.cu  DataStreamingTest.h  DedispersionAnalyserTest.h  DedispersionBufferTest.h  DedispersionDataAnalysisOutputTest.h  DedispersionDataGenerator.h  DedispersionModuleTest.h  DedispersionSpectraTest.h  EmbraceChunkerTest.h  FilterBankAdapterTest.h  GPU_ManagerTest.h  GPU_MemoryMapTest.h  GPU_NVidiaTest.h  GPU_ParamTest.h  GPU_TestCard.h  H5_LofarBFDataWriterTest.h  H5_LofarBFStokesWriterTest.h  H5_LofarBFVoltageWriterTest.h  JTestEmulator.h  LockingContainerTest.h  LofarChunkerTest.h  LofarDataBlobGenerator.h  LofarDataGenerator.h  LofarDataSplittingChunkerTest.h  LofarEmulatorDataSim.h  LofarPipelineTester.h  LofarUdpEmulator.h  PPFChanneliserTest.h  PPF_ChanneliserTest.h  (+12 more)
src/lib/test/data/: t191_BAND.bp
src/lib/test/src/: ABEmulator.cpp  ABEmulatorMain.cpp  AdapterSubbandTimeSeriesTest.cpp  AdapterTimeSeriesDataSetTest.cpp  AdapterTimeStreamTest.cpp  BandPassTest.cpp  BinMapTest.cpp  ChannelisedStreamDataTest.cpp  ChanneliserPolyphaseTest.cpp  CppUnitMain.cpp  DataStreamingTest.cpp  DedispersionAnalyserTest.cpp  DedispersionBufferTest.cpp  DedispersionDataAnalysisOutputTest.cpp  DedispersionDataGenerator.cpp  DedispersionModuleTest.cpp  DedispersionSpectraTest.cpp  EmbraceChunkerTest.cpp  FilterBankAdapterTest.cpp  GPU_ManagerTest.cpp  GPU_MemoryMapTest.cpp  GPU_NVidiaTest.cpp  GPU_ParamTest.cpp  GPU_TestCard.cpp  H5_LofarBFDataWriterTest.cpp  H5_LofarBFStokesWriterTest.cpp  H5_LofarBFVoltageWriterTest.cpp  JTestEmulator.cpp  JTestEmulatorMain.cpp  LockingContainerTest.cpp  LofarChunkerTest.cpp  LofarDataBlobGenerator.cpp  LofarDataGenerator.cpp  LofarDataSplittingChunkerTest.cpp  LofarEmulatorDataSim.cpp  LofarPipelineTester.cpp  LofarUdpEmulator.cpp  PPFChanneliserTest.cpp  PPFChanneliserTestMain.cpp  PPF_ChannelProfileTest.cpp  (+18 more)
src/pipelines/: CMakeLists.txt
src/pipelines/mdsm/: CMakeLists.txt  EmptyPipeline.h  MdsmPipeline.h  TimingPipeline.h  UdpBFPipeline.h  UdpBFPipelineStream2.h
src/pipelines/mdsm/data/: CommonParameters.xml  empty-config.xml  mdsm-config.xml  pulsar_tests.xml  server.xml  (+5 more)
src/pipelines/udpstream/: ABBufPipeline.h  ABPipeline.h  BandPassPipeline.h  CMakeLists.txt  DedispersionApplication.h  DedispersionPipeline.h  EmbraceBFApplication.h  EmbraceBFPipeline.h  EmptyPipeline.h  H5CVApplication.h  H5CVPipeline.h  JTestPipeline.h  SigProcPipeline.h  SigprocPipeline.h  StokesOnlyPipeline.h  TimingPipeline.h  UdpBFApplication.h  UdpBFPipeline.h  UdpBFPipelineStream1.h
src/useful/: J2000rad.py  fitband2.py  plotFRB.py
src/viewer/: CMakeLists.txt  DataBlobWidget.h  DataViewer.h  FileDataViewer.h  LofarDataViewer.h  PlotPicker.h  PlotWidget.h  SpectrumDataSetWidget.h  SubbandSpectrumWidget.h  ThreadedBlobClient.h  fileviewer.cpp  main.cpp  viewerConfig.xml
src/viewer/forms/: SpectrumDataSetViewer.ui  SubbandSpectraViewer.ui
src/viewer/src/: .DataViewer.cpp.swp  DataBlobWidget.cpp  DataViewer.cpp  FileDataViewer.cpp  LofarDataViewer.cpp  PlotPicker.cpp  PlotWidget.cpp  SpectrumDataSetWidget.cpp  SubbandSpectrumWidget.cpp  ThreadedBlobClient.cpp
src/viewer/test/: CMakeLists.txt  PlotWidgetTest.h  SpectrumSender.cpp
(+94 files in other folders)
